--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="assets/images/logo.png" alt="Logo" class="logo" />
+    <img src="assets/images/logo.svg" alt="Logo" class="logo" />
     <h1>Welcome to TMail</h1>
   </header>
   <main>
