--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>TMail</title>
+  <title>TMail - David D Ongkes</title>
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
   <header>
+    <!-- Logo SVG -->
     <img src="assets/images/logo.svg" alt="Logo" class="logo" />
     <h1>Welcome to TMail</h1>
   </header>
