--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+ <!doctype html>
 <html>
 <head>
   <meta charset="utf-8"/>
@@ -29,8 +29,8 @@
   </div>
 
 <script>
-  const apiBase = "http://localhost:3000"; 
-  // nanti kalau sudah deploy backend, ganti ke "https://backend.masaxmas.my.id"
+  const apiBase = "http://192.168.1.128:3000"; 
+  // backend Termux berjalan di IP lokal
 
   document.getElementById("btnGen").addEventListener("click", async () => {
     const btn = document.getElementById("btnGen");
