--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
- <!doctype html>
+<!doctype html>
 <html>
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Masaxmas - david D ongkes</title>
+  <title>Masaxmas - Temporary Email</title>
   <style>
     body {font-family:system-ui,Segoe UI,Arial;background:#f3f4f6;padding:24px}
     .card {background:#fff;padding:18px;border-radius:8px;box-shadow:0 4px 12px rgba(0,0,0,.06);max-width:720px;margin:16px auto}
@@ -29,8 +29,8 @@
   </div>
 
 <script>
-  const apiBase = "http://192.168.1.128:3000"; 
-  // backend Termux berjalan di IP lokal
+  // Ganti URL di bawah ini dengan URL backend yang bisa diakses publik
+  const apiBase = "https://backend.masaxmas.my.id";
 
   document.getElementById("btnGen").addEventListener("click", async () => {
     const btn = document.getElementById("btnGen");
