--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Masaxmas - Temporary Email</title>
+  <title>Masaxmas - david D ongkes</title>
   <style>
     body {font-family:system-ui,Segoe UI,Arial;background:#f3f4f6;padding:24px}
     .card {background:#fff;padding:18px;border-radius:8px;box-shadow:0 4px 12px rgba(0,0,0,.06);max-width:720px;margin:16px auto}
